--- a/src/App.css
+++ b/src/App.css
@@ -6,35 +6,51 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
-.menu, .board, .result, .leaderBoard{
+
+.menu, .board, .result, .leaderBoard, .wrapper{
   height: 50vh;
   width: 50vh;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  border: 4px solid black;
+}
+
+.wrapper{
+  border: 10px solid var(--contrast-color);
+  border-radius: 2%;
 }
 
 .board{
+
   display: grid;
   grid-template-rows: minmax(1px, 1fr);
   grid-auto-rows: minmax(1px, 1fr);
   grid-auto-columns: minmax(1px, 1fr);
 }
 
-.cell{
+.menu{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.E{
   background-color: grey;
 }
 
-.cell:hover{
+.E:hover{
   background-color: blue;
 }
 
+.H{
+  background-color: aliceblue;
+}
 
-.menu, .result, .leaderBoard{
+
+.board, .result, .leaderBoard{
   display:none;
+  
 }
 
