add random fruit function

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,9 @@
   background-color: aliceblue;
 }
 
+.F{
+  background-color: rgb(255, 127, 127);
+}
 
 .board, .result, .leaderBoard{
   display:none;
