add station sneak

--- a/src/App.css
+++ b/src/App.css
@@ -44,13 +44,14 @@
   background-color: blue;
 }
 
-.H{
+.S{
   background-color: aliceblue;
 }
 
 .F{
   background-color: rgb(255, 127, 127);
 }
+
 
 .board, .result, .leaderBoard{
   display:none;
