--- a/src/App.css
+++ b/src/App.css
@@ -1,60 +1,74 @@
-.header, .footer{
-  background-color: var(--ui-color);
+.header,
+.footer {
+	background-color: var(--ui-color);
 }
 
-.body{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.body {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-
-.menu, .board, .result, .leaderBoard, .wrapper{
-  height: 50vh;
-  width: 50vh;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+.menu,
+.board,
+.result,
+.leaderBoard,
+.wrapper,
+.deathScreen {
+	height: 50vh;
+	width: 50vh;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
 }
 
-.wrapper{
-  border: 10px solid var(--contrast-color);
-  border-radius: 2%;
+.wrapper {
+	border: 10px solid var(--contrast-color);
+	border-radius: 2%;
 }
 
-.board{
-
-  display: grid;
-  grid-template-rows: minmax(1px, 1fr);
-  grid-auto-rows: minmax(1px, 1fr);
-  grid-auto-columns: minmax(1px, 1fr);
+.board {
+	display: grid;
+	grid-template-rows: minmax(1px, 1fr);
+	grid-auto-rows: minmax(1px, 1fr);
+	grid-auto-columns: minmax(1px, 1fr);
 }
 
-.menu{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.menu {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-.E{
-  background-color: grey;
+.E {
+	background-color: grey;
 }
 
-.E:hover{
-  background-color: blue;
+.E:hover {
+	background-color: blue;
 }
 
-.S{
-  background-color: aliceblue;
+.S {
+	background-color: aliceblue;
 }
 
-.F{
-  background-color: rgb(255, 127, 127);
+.F {
+	background-color: rgb(255, 127, 127);
 }
 
-
-.board, .result, .leaderBoard{
-  display:none;
-  
+.deathScreen {
+	position: absolute;
+	background: rgb(0, 0, 0);
+	background: linear-gradient(
+    180deg,
+		rgb(59, 59, 59) 16%,
+		rgba(155, 155, 155, 0.116) 100%
+	);
 }
 
+.board,
+.result,
+.leaderBoard,
+.deathScreen {
+	display: none;
+}
