--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,34 @@
 .header,
 .footer {
 	background-color: var(--ui-color);
+	z-index: 10;
+}
+a{
+	text-decoration: none;
+}
+a:visited{
+	color: inherit;
 }
 
-.body {
+.header{
 	display: flex;
+	justify-content:left;
 	align-items: center;
-	justify-content: center;
+	padding-left: 2rem;
+	font-size: 30px;
+	color: #2c2615;
+}
+
+
+.body {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr;
+	background-color: rgb(252, 240, 226);
+}
+
+#root{
+	font-family:'Times New Roman', Times, serif;
 }
 
 .menu,
@@ -21,18 +43,31 @@
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
+	z-index: 8;
 }
 
 .wrapper {
+	grid-column: 2/3;
+	grid-row: 2/3;
 	border: 10px solid var(--contrast-color);
 	border-radius: 2%;
+	background-color: rgb(227, 240, 252);
+	z-index: 9;
+}
+
+.space{
+	background-color: rgb(252, 240, 226);
+	z-index: 10;
 }
 
 .board {
+	position: absolute;
 	display: grid;
 	grid-template-rows: minmax(1px, 1fr);
 	grid-auto-rows: minmax(1px, 1fr);
 	grid-auto-columns: minmax(1px, 1fr);
+
+	margin-right: 100vw;
 }
 
 .menu {
@@ -41,25 +76,25 @@
 	justify-content: center;
 }
 
+/* empty space */
 .E {
-	background-color: grey;
+	background-color: rgb(122, 122, 122);
 }
 
-.E:hover {
-	background-color: blue;
-}
-
+/* snake */
 .S {
-	background-color: aliceblue;
+	background-color: rgb(126, 247, 167);
+	border: 1px #7a7a7a solid;
 }
 
+/* fruit */
 .F {
 	background-color: rgb(255, 127, 127);
+	border: 3px rgb(251, 181, 181) dotted;
 }
 
 .pause {
-	position: absolute;
-	
+	position: absolute;	
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -70,6 +105,10 @@
 		rgb(83, 83, 83) 16%,
 		rgba(83, 83, 83, 0.116) 100%
 	);
+
+	color:black;
+	font-size: larger;
+	font-weight: bolder;
 }
 
 
