--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ a:visited{
 	color: inherit;
 }
 
-.header{
+.header, .footer{
 	display: flex;
 	justify-content:left;
 	align-items: center;
@@ -18,6 +18,18 @@ a:visited{
 	font-size: 30px;
 	color: #2c2615;
 }
+.footer{
+	font-size: 15px;
+	align-items: flex-start;
+	padding-left: 0.5rem;
+	padding-top: 0.5rem;
+}
+
+br{
+	display: block;
+	margin: 2px;
+}
+
 
 
 .body {
@@ -66,8 +78,6 @@ a:visited{
 	grid-template-rows: minmax(1px, 1fr);
 	grid-auto-rows: minmax(1px, 1fr);
 	grid-auto-columns: minmax(1px, 1fr);
-
-	margin-right: 100vw;
 }
 
 .menu {
