--- a/src/cssAnimation.css
+++ b/src/cssAnimation.css
@@ -1,9 +1,11 @@
 .board {
     animation: 0.5s ease-in-out 0s ease-in-1;
+    animation-direction: alternate;
 }
 
 .pause {
     animation: 0.5s ease-in-out 0s ease-in-2;
+    animation-direction: alternate;
 }
 
 @keyframes ease-in-1 {
@@ -20,8 +22,8 @@
 	from {
 		position: absolute;
 		margin-left: 40%;
-	}
-	99% {
-        margin-left: 0;
-	}
+    }
+    to{
+        margin-left:0;
+    }
 }
